# alma-library-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.ghcr.yml  docker-compose.gpu.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-ai.txt  requirements-core.txt  requirements.txt  settings.example.json  setup.ps1  setup.sh
.github/workflows/: docker-publish.yml  docs-pages.yml  release-connector.yml
branding/: README.md  palette.md  type.md
branding/docs/: accessibility.md  favicon-usage.md  logo-usage.md
branding/frontend/: README.md  tailwind.config.example.ts  tokens.css  tokens.json  tokens.ts
branding/frontend/components/: AppIcon.tsx  BrandElements.tsx  Logo.tsx  LogoMark.tsx  index.ts
branding/frontend/ui-examples/: alma-empty-state.html  alma-library-card.html  alma-sidebar.html
docs/: external-api-audit.md  index.md  openapi.json  vision.md
docs/concepts/: ai.md  alerts.md  authors.md  discovery.md  feed.md  health.md  index.md  insights.md  lenses.md  library.md  paper-lifecycle.md
docs/development/: architecture.md  contributing.md  frontend.md  index.md  testing.md
docs/getting-started/: docker.md  first-run.md  index.md  installation.md
docs/operations/: background-jobs.md  backups.md  deployment.md  docker-volume-ownership.md  index.md  performance.md
docs/reference/: api.md  configuration.md  database.md  external-apis.md  index.md  scoring.md
docs/releases/: v0.21.0.md  v0.21.1.md
docs/user-guide/: browser-connector.md  configuring-ai.md  importing.md  index.md  reading-workflow.md  saving-papers.md  setting-up-alerts.md  tracking-authors.md  tuning-discovery.md
extension/: README.md  background.js  content.js  manifest.json  options.css  options.html  options.js  package.json  popup.css  popup.html  popup.js  release.sh  updates.json
extension/hooks/: pre-push
extension/lib/: extract.js  outbox.js  servers-ui.js  settings.js
extension/test/: extract.test.js  outbox.test.js  popup-render.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ActivityPanel.tsx  AuthorDetailPanel.tsx  CommandPalette.tsx  ImportDialog.tsx  OnlineSearchTab.tsx  ScoreBreakdownPanel.tsx  StarRating.tsx
frontend/src/hooks/: useAuthorsPageState.ts  useConnectorStatus.ts  useElementWidth.ts  useOperationToasts.ts  usePaperAuthorFollow.ts  usePaperUndo.ts  useToast.ts
frontend/src/lib/: activity.ts  connector.test.ts  connector.ts  format.test.ts  format.ts  hashRoute.ts  palette.ts  queryHelpers.ts  signals.test.ts  signals.ts  sort.test.ts  sort.ts  utils.test.ts  utils.ts
frontend/src/pages/: AlertsPage.tsx  AuthorsPage.tsx  DiscoveryPage.tsx  FeedPage.tsx  HealthPage.tsx  InsightsPage.tsx  LibraryPage.tsx  SettingsPage.tsx
frontend/src/test/: button-aschild.test.tsx  setup.ts  surface-guard.test.ts
frontend/src/types/: react-force-graph-2d.d.ts
scripts/: deploy-prod.sh  probe_activity_overlap.py  probe_last_refresh.py  probe_s2_vs_local_specter2.py  release.sh  restart-alma-clean.sh  start-dev.sh
src/alma/: __init__.py  config.py  version.py
src/alma/ai/: accel.py  auto_tagger.py  cluster_labels.py  clustering.py  cooccurrence.py  embedding_graph.py  embedding_sources.py  environment.py  graph_versions.py  import_state.py  neighbor_graph.py  projections.py  providers.py  semantic_search.py
src/alma/api/: __init__.py  app.py  deps.py  helpers.py  models.py  scheduler.py
src/alma/application/: __init__.py  alerts.py  author_affiliation.py  author_backfill.py  author_identity.py  author_lifecycle.py  author_merge.py  author_neighbourhood.py  author_network.py  author_profile.py  author_signal.py  authors.py  diagnostics_stats.py  discovery.py  feed.py  feed_monitors.py  feed_query_language.py  followed_authors.py  gap_radar.py  import_preflight.py  imports.py  library.py  materialized_views.py  openalex_manual.py  outcome_calibration.py  paper_metadata.py  paper_signal.py  preprint_dedup.py  recommendation_outcomes.py  reports.py  signal_projection.py
src/alma/cli/: __init__.py  main.py
src/alma/core/: __init__.py  author_names.py  backend.py  components.py  concurrency.py  database.py  db_retry.py  db_write.py  fetch_pipeline.py  fetcher.py  http_sources.py  identifier_resolution.py  job_envelope.py  job_policy.py  keywords.py  logging.py  migrations.py  paper_groups.py  paper_updates.py  redaction.py  resolution.py  scope.py  scoring_math.py  secrets.py  settings_helpers.py  sql_helpers.py  topics.py  (+5 more)
(+275 files in other folders)
