[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alma"
version = "0.14.0"
description = "ALMa — Another Library Manager: personal academic library management with AI-powered discovery"
authors = [{name = "Andrea Ivan Costantino"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["academic", "library", "publications", "openalex", "discovery", "recommendations", "research"]
license = {text = "PolyForm-Noncommercial-1.0.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    # Scheduling
    "apscheduler>=3.10.4",
    # HTTP client
    "requests>=2.31.0",
    # Numerical (used in discovery, similarity, clustering, embeddings)
    "numpy>=1.24.0",
    # Progress bars
    "tqdm>=4.65.0",
    # .env loading + Settings-UI key rotation (set_key / unset_key)
    "python-dotenv>=1.0.0",
    # Slack notifier plugin (lazy-imported, but bundled for default UX)
    "slack-sdk>=3.20.0",
    # Google Scholar fallback (optional but included for out-of-box experience)
    "scholarly",
    # Discovery clustering / projections / TF-IDF text similarity. These
    # are foundational (Discovery branches, Insights Graph, similarity
    # fallback) and don't need torch — they ship ARM wheels and stay in
    # the lite Docker variant. ~150 MB combined.
    "scikit-learn>=1.3.0",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.5",
]

[project.optional-dependencies]
# BibTeX/Zotero import support
import = [
    "bibtexparser>=1.4.0",
    "pyzotero>=1.5.0",
]
# Heavyweight AI extras — local SPECTER2 encoder. torch is pinned
# explicitly: modern `transformers` (>=4.x) and `adapters` no longer
# require torch transitively, so without this pin a `pip install
# .[ai]` succeeds but leaves the SPECTER2 encoder unusable at runtime.
# Excluded from the `lite` Docker variant. LLM features removed in
# 2026-04 (see tasks/01_LLM_PRODUCTION_EXIT.md).
#
# For the smaller CPU-only torch wheel (~200 MB vs ~2 GB CUDA), install
# from PyTorch's CPU index:
#   pip install --index-url https://download.pytorch.org/whl/cpu \
#               --extra-index-url https://pypi.org/simple .[ai]
# The Dockerfile already does this via `requirements-ai.txt`.
ai = [
    "torch>=2.2,<3.0",
    "transformers~=4.51.3",
    "adapters>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]
# Documentation site (mkdocs material + plugins)
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-swagger-ui-tag>=0.6.0",
    "pymdown-extensions>=10.0",
]

[project.scripts]
alma = "alma.cli.main:main"

[project.urls]
Homepage = "https://github.com/costantinoai/alma-library-manager"
Documentation = "https://costantinoai.github.io/alma-library-manager/"
Repository = "https://github.com/costantinoai/alma-library-manager"
Issues = "https://github.com/costantinoai/alma-library-manager/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["alma*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled by black

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async (pytest-asyncio)",
]

[tool.coverage.run]
source = ["src/alma"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
